<resources>
    <string name="app_name">PatientSocialDistance</string>
    <string name="confirm">Confirm</string>
    <string name="you_date">You Date</string>
    <string name="who_guide">Who Guide</string>
    <string name="user">User</string>
    <string name="date">Date</string>
    <string name="ok">OK</string>
    <string name="calender">Calender</string>
    <string name="register_new_account">Register New Account</string>
    <string name="name_login">Name:</string>
    <string name="age_login">Age:</string>
    <string name="national_id_login">National ID:</string>
    <string name="phone_number_login">Phone Number:</string>
    <string name="e_mail_login">E-mail:</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="phone_number">phone number</string>
    <string name="hospital">Hospital</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="usernam_login">Username:</string>
    <string name="interactions_list">Interactions List</string>
    <string name="patient_schedule">Patient Schedule</string>
    <string name="accept_appointments">Accept appointments</string>
    <string name="visit_schedule">Visit Schedule</string>
    <string name="blocklist">Blocklist</string>
    <string name="time">Time</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="request">Request</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="nationality">Nationality:</string>
    <string name="hospital_login">Hospital:</string>
    <string name="select_a_visit_date">Select a visit date</string>
    <string name="search_for_user">Search for User</string>
    <string name="write_a_message">Write a Message</string>
    <string name="result">Result</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="_15_00_16_00_17_00">15:00 - 16:00 - 17:00</string>
    <string name="_09_00_11_00_12_15">09:00 - 11:00 - 12:15</string>
    <string name="user_image">User Image</string>
    <string name="message">Message</string>
    <string name="filter_by_date">Filter by date:</string>
    <string name="plus">+</string>
    <string name="block">block</string>
    <string name="cancel">Cancel</string>
    <string name="duration">Duration:</string>
    <string name="notification">Notification</string>
    <string name="made_by">Made By</string>
</resources>