<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:gravity="center">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:gravity="center">
        <ImageButton
            android:id="@+id/patientVisitorImageBlockCardIB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_face"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/patientVisitorNameBlockCardTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/patientVisitorHospitalBlockCardTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/hospital"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/patientVisitorPhoneNumberBlockCardTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/patientVisitorCancelBlockCardTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_red_degree"
            android:padding="10dp"
            android:text="Cancel"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>