<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.patient_schedule.PatientScheduleActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/bar_color"
            android:gravity="center"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:gravity="center"
                tools:ignore="NestedWeights">

                <ImageView
                    android:id="@+id/patientVisitorImageIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_image"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/patientVisitorNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/patientVisitorHospitalTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
<!--                <TextView-->
<!--                    android:id="@+id/patientVisitorPhoneNumberTV"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/phone_number"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="18sp"/>-->
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center">
            <!-- Add CalendarView to display the Calendar -->
            <CalendarView
                android:id="@+id/patientScheduleCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CalendarView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/patient_schedule_date">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/you_date"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/patientVisitDateDayTV"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="12"
                        android:textColor="@color/white"
                        android:textSize="38sp"
                        android:textAlignment="center"
                        tools:ignore="NestedWeights" />
                    <TextView
                        android:id="@+id/patientVisitDateMonthTV"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="May"
                        android:textColor="@color/white"
                        android:textSize="28sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/patientVisitDateEveningOrMorningTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/morning"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_09_00_11_00_12_15"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/patientVisitDateTimeTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/afternoon"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_15_00_16_00_17_00"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:orientation="vertical">-->
<!--                <androidx.appcompat.widget.AppCompatButton-->
<!--                    android:id="@+id/confirmBT"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/confirm"-->
<!--                    android:textSize="20dp"-->
<!--                    android:paddingLeft="10dp"-->
<!--                    android:paddingRight="10dp"-->
<!--                    android:background="@drawable/rounded_border_violate"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_marginRight="10dp" />-->
            </LinearLayout>

        </LinearLayout>
</layout>