<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/bar_color"
    android:layout_margin="10dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/patientVisitorImageIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_face"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/patientVisitorNameAppointmentCardTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/patientVisitorMessageAppointmentCardTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/patientVisitorDateAppointmentCardTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/acceptIV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:src="@mipmap/ic_accept"
            tools:ignore="NestedWeights" />
        <ImageView
            android:id="@+id/rejectIV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_reject"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/editIV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_edit"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>