<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.accept_appointments.AcceptAppointmentsActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:gravity="center"
                android:textSize="40dp"
                android:textColor="@color/blue"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/numberOfFirstDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:background="@drawable/circle_border_blue_light"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/monthOfFirstDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/month"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/dayOfFirstDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/day"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/numberOfSecondDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:background="@drawable/circle_border_blue"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/monthOfSecondDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/month"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/dayOfSecondDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/day"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/numberOfThirdDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:background="@drawable/circle_border_blue_light"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/monthOfThirdDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/month"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/dayOfThirdDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/day"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:textColor="@color/white"
                android:background="@drawable/circle_border_blue"
                android:gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/appointmentsRequestedRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

    </LinearLayout>
</layout>